--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.28)
 project(DSP)
 
-set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD 14)
 
-add_executable(DSP main.cpp)
+add_executable(DSP main.cpp Entity.cpp Player.cpp Door.cpp Inventory.cpp Item.cpp)
