--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,12 @@ project(DSP)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(DSP main.cpp Entity.cpp Player.cpp Door.cpp Inventory.cpp Item.cpp)
+add_executable(DSP
+        main.cpp
+        Entity.cpp
+        Player.cpp
+        Door.cpp
+        Inventory.cpp
+        Item.cpp
+        Event.cpp  # Make sure this line is present
+)
